<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/lifecycleLogSampleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle_sample"
        app:layout_constraintBottom_toTopOf="@+id/finishSampleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/finishSampleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_sample"
        app:layout_constraintBottom_toTopOf="@+id/requestForResultSampleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifecycleLogSampleButton" />

    <Button
        android:id="@+id/requestForResultSampleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_for_result_sample"
        app:layout_constraintBottom_toTopOf="@+id/argumentsSampleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishSampleButton" />

    <Button
        android:id="@+id/argumentsSampleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arguments_sample"
        app:layout_constraintBottom_toTopOf="@+id/saveStateSampleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestForResultSampleButton" />

    <Button
        android:id="@+id/saveStateSampleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_state_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argumentsSampleButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
